apps/base/audiobookshelf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    http-ingress: "true"
