apps/base/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    lbipam.cilium.io/sharing-key: homelab
    lbipam.cilium.io/sharing-cross-namespace: default,audiobookshelf,linkding,mealie,pihole
  labels:
    app: audiobookshelf
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3005
      protocol: TCP
      targetPort: 13378
  selector:
    app: audiobookshelf
